--- a/index.html
+++ b/index.html
@@ -12,10 +12,17 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="container">
+        <h1 class="gif-title">Marrie</h1>
+        <p>Personagem do filme Aristogatas</p>
+        <img class="img-movimento" src="img/Marrie.gif" alt="Gatinha Marrie">
+    </div>
 
-    <h1 class="gif-title"> </h1>
-    <img class="img-movimento" src="" alt="">
-    
+    <div class="container2">
+        <h1 class="gif-title">Taylor</h1>
+        <p>Taylor Swift</p>
+        <img class="img-moviment" src="img/Taylor.gif" alt="Cantora">
+    </div>
 
 </body>
 </html>
